# Soft-Robotic-ROV

./: .gitignore  CMakeLists.txt  README.md  pic.dot  requirements.txt  requirments.txt  run.sh  抓取流程.dot  方案.md
client/: auv.py  client.py  controller.py  manipulate.py  pwm.py  rov.py  visual_info.py
client/rovClient/: __init__.py  core.py
client/temp/: EveBytesAvailableFcn.m  GRLKPID1.m  Kalman.m  RLKMIC.m  RLKMIC2.m  dacefit.m  inversekinematics.m  inversekinematics1.m  kringpredict.m  predictor.m  start_callback.m
config/: config  install.sh
cpp_sockets/: CMakeLists.txt
cpp_sockets/include/: client.hpp
cpp_sockets/src/: client.cpp
doc/: Jetson配置.md  ROV运动系统通信协议1.0.docx  marker_readme.md  抓取流程.dot
doc/ITV0030-3BL电气比例阀/: ITV0030-3BL.md  ITV0030-XBL.md
doc/Jetson AGX Xavier/: Jetson配置.md  树莓派Jetson16路I2C舵机驱动板.md
doc/Jetson_AGX_Xavier/: Jetson配置.md  树莓派Jetson16路I2C舵机驱动板.md  水压水深传感器.md
doc/ROV STM32下位机/: ROV中CAN协议.xlsx  机器人使用说明1.0.docx
doc/ROV上位机(手柄)源码/: ROV.sln
doc/ROV上位机(手柄)源码/SoftwareArmROV/: Program.cs  SoftwareArmROV.csproj  frmControl.Designer.cs  frmControl.cs  frmControl.resx  frmPID.Designer.cs  frmPID.cs  frmPID.resx
doc/ROV上位机(手柄)源码/SoftwareArmROV/JoyKeys/: JosystickSend.cs  Joystick.cs  JoystickAPI.cs  JoystickEventArgs.cs  JoystickHandle.cs
doc/ROV上位机(手柄)源码/SoftwareArmROV/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
doc/气动系统/: pwm转模拟电压模块.md
doc/舱内/: 气动前舱.md  电气后舱.md
include/: color.h  detector.h  marker_detector.h  parallel_camera.h  rov.h  rov_close.h  ruas.h  uart.h  utils.h  visual_server.h
libs/cpp_sockets/src/: client.cpp
server/: CppPythonSocket.py  ROV-Control-Server.py
server/controller/: auv.py  controller.py  manipulate.py  ms5837.py  pwm.py  rov.py  utils.py  visual_info.py
server/static/: p5.touchgui.js  pad.js
server/templates/: index.html  tune.html
src/: .rov.cpp.swp  detector.cpp  en.utf-8.add  main.cpp  marker_detector.cpp  parallel_camera.cpp  rov.cpp  ruas.cpp  uart.cpp  utils.cpp  visual_server.cpp
utils/: delay_test.py  joystick  joystick.c  js2key  key_test.py
