cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
project(Soft-Robotics-ROV)

set(CMAKE_PREFIX_PATH "~/local/libtorch")
find_package(Torch REQUIRED)
find_package( OpenCV 3 REQUIRED)
set(OpenCV_LIBS ${OpenCV_LIBS})
find_package (gflags REQUIRED)
include_directories (${gflags_INCLUDE_DIR})
include_directories( ${OpenCV_INCLUDE_DIRS} include)

file(GLOB SOURCES "src/*.cpp")
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} ${TORCH_LIBRARIES} ${OpenCV_LIBS} gflags glog)